Add presentation, various screenshots from app and non FSL_MODE for custom maps

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,6 +19,7 @@
         <item>Nearest Neighbor</item>
         <item>k-Nearest Neighbors</item>
         <item>Weighted k-Nearest Neighbors</item>
+        <item>Enhanced Weighted k-Nearest Neighbors</item>
     </string-array>
     <string-array name="methods">
         <item>Fingerprinting</item>
